--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "bootstrap-css-only": "^4.3.1",
     "core-js": "^3.3.2",
+    "mdbvue": "^6.0.1",
     "vue": "^2.6.10"
   },
   "devDependencies": {
